# topiks-kafka-client

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
src/api_client/: mod.rs
src/kafka_protocol/: api_verification.rs  protocol_primitives.rs  protocol_request.rs  protocol_response.rs  protocol_serializable.rs
src/kafka_protocol/protocol_requests/: alterconfigs_request.rs  createtopics_request.rs  deletetopics_request.rs  describeconfigs_request.rs  findcoordinator_request.rs  listoffsets_request.rs  metadata_request.rs  mod.rs  offsetfetch_request.rs
src/kafka_protocol/protocol_responses/: alterconfigs_response.rs  createtopics_response.rs  deletetopics_response.rs  describeconfigs_response.rs  findcoordinator_response.rs  listoffsets_response.rs  metadata_response.rs  mod.rs  offsetfetch_response.rs
